# proofengine-hybrid-probe

./: .gitignore  DISCLAIMER.md  Makefile  README.md  SECURITY.md  cli.py  pyproject.toml  requirements.txt
.github/: RELEASE.md  description.md
.github/workflows/: ci.yml  release.yml
LICENSES/: CODE_LICENSE.txt
demo_repo/src/: __init__.py  pure_fn.py  sanitize.py
demo_repo/tests/: test_pure_fn.py  test_rate_limiter.py  test_sanitize.py  test_utils.py
docs/: diagram.mmd  vision.md
examples/candidates/: add_buggy.py  add_v1.py
examples/constraints/: obligations.simple.json
examples/proofs/tests/: test_add.py
generator/: __init__.py  mutators.py  stochastic.py
metrics/: __init__.py  collect.py  report.py
obligations/: policies.py
planner/: meta.py  scoring.py
proofengine/controller/: deterministic.py  patch.py
proofengine/core/: delta.py  llm_client.py  pcap.py
proofengine/verifier/: runner.py
runner/: cli.py  deterministic.py  verifier.py
scripts/: audit_pack.py  demo.py  make_logs.py  make_release.py  verify.py  verify_simple.py
spec_pack/tools/: a2h_compile.py  a2h_semantics.py  gen_metrics.py  merkle_hasher.py  run_s1.py  s2_check.py  s2_contradiction.py  s2_reset.py  verify.py
src/proof_engine/: orchestrator.py  pcap.py  verifier.py
src/proof_engine/schemas/: pcap.schema.json  state_x.schema.json
tests/: test_controller.py  test_core.py  test_integration.py  test_llm_client.py  test_orchestrator.py  test_pcap.py
verifier/: attest.py  runner.py
