[project]
name = "proof-engine-brief"
version = "0.1.0"
description = "Public brief: Orchestrator/Verifier + PCAP demo"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name="Independent Research"}]

[tool.ruff]
line-length = 100
target-version = "py311"
lint.select = ["E","F","I","B","W"]
